--- a/app/bundle/index.html
+++ b/app/bundle/index.html
@@ -1,1 +1,11 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>API Server</title></head><body><div id="app"></div><script src="index_bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="UTF-8"><title>API Server</title>
+</head>
+<body>
+<div id="app"></div>
+<script></script>
+<script src="index_bundle.js"></script>
+</body>
+</html>
